# parakeet-stt-zmq-pipe

./: README.md  example_consumer.py  main.py  pyproject.toml  test_client.py  test_config_priority.py  test_env_integration.py
.clinerules/: 01-code-style.md
src/stt/: cli.py  client.py  config.py  service.py
src/stt/connection/: __init__.py  sqlite_connection.py
src/stt/core/: model_manager.py  transcription.py
src/stt/dataset/: __init__.py  generator.py
src/stt/messaging/: schemas.py  serialization.py  zmq_handler.py
src/stt/processing/: audio.py
src/stt/utils/: logging.py
